--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "venues": "npm run upload.js"
+    "venues": "node upload.js"
   },
   "dependencies": {
     "firebase": "^6.6.2",
